--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -25,6 +25,21 @@ h1 {
   font-family: 'Chicken Steak', sans-serif;
 }
 
+button {
+  transition: 0.3s ease;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 100px;
+  color: white;
+  background-color: green;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+button:hover {
+  transform: scale(1.1);
+}
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
