--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,19 +21,19 @@ a,
   padding: 3px;
 }
 
-h1 {
-  font-family: 'Chicken Steak', sans-serif;
-}
-
 button {
   transition: 0.3s ease;
-  padding: 10px 20px;
+  padding: 8px 16px;
   border: none;
   border-radius: 100px;
-  color: white;
-  background-color: green;
-  font-size: 20px;
+  color: black;
+
+  font-size: 16px;
   cursor: pointer;
+  width: fit-content;
+
+  background-color: rgba(255, 255, 255, 0.5);
+  border: 1px solid white;
 }
 
 button:hover {
